# vietocr

./: .gitignore  main.py  pyproject.toml  requirements.txt  vietocr_gettingstart_last.ipynb
